--- a/k8-manifests/release/api-server.yaml
+++ b/k8-manifests/release/api-server.yaml
@@ -35,7 +35,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: api-server
-        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/api-server:v0.1.0
+        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/api-server:spanner-v0.1.0
         securityContext:
           privileged: false
           allowPrivilegeEscalation: false
