doc: revert unnecessary changes

--- a/k8-manifests/common/springprofile-h2.yaml
+++ b/k8-manifests/common/springprofile-h2.yaml
@@ -23,5 +23,5 @@ kind: ConfigMap
 metadata:
   name: spring-profile
 data:
-  SPRING_PROFILES_ACTIVE: "inmemory"
+  SPRING_PROFILES_ACTIVE: "INMEMORY"
 # [END anthosbaremetal_common_springprofile_h2_configmap_spring_profile]
