--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
           <version>3.3.1</version>
           <configuration>
             <from>
-              <image>eclipse-temurin:17.0.4.1_1-jre-alpine</image>
+              <image>eclipse-temurin:17.0.7_7-jre-jammy</image>
             </from>
           </configuration>
         </plugin>
