--- a/src/payments/src/main/resources/application-jss.properties
+++ b/src/payments/src/main/resources/application-jss.properties
@@ -1,6 +1,6 @@
 spring.cloud.gcp.logging.enabled=true
 spring.cloud.gcp.spanner.project-id=${PROJECT_ID}
 spring.cloud.gcp.spanner.instance-id=${SPANNER_ID}
-spring.cloud.gcp.spanner.database=${DATABASE}
+spring.cloud.gcp.spanner.database=${SPANNER_DATABASE}
 spring.cloud.gcp.spanner.emulator.enabled=false
 spring.cloud.gcp.spanner.emulator-host=${SPANNER_EMULATOR_URL}
