--- a/src/ui/pom.xml
+++ b/src/ui/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>com.google.abm-edge</groupId>
     <artifactId>abm-edge-usecase</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.2.0</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>ui</artifactId>
