--- a/k8-manifests/release/payments.yaml
+++ b/k8-manifests/release/payments.yaml
@@ -37,7 +37,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: payments
-        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/payments:spanner-v0.1.0
+        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/payments:v0.1.0
         securityContext:
           privileged: false
           allowPrivilegeEscalation: false
