--- a/k8-manifests/release/api-server.yaml
+++ b/k8-manifests/release/api-server.yaml
@@ -35,14 +35,14 @@ spec:
         fsGroup: 1000
       containers:
       - name: api-server
-        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/api-server:v0.1.0
+        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/api-server:v0.2.0-jss
         securityContext:
           privileged: false
           allowPrivilegeEscalation: false
           runAsNonRoot: true
           capabilities:
             drop:
-              - all
+            - all
         env:
         - name: INVENTORY_EP
           valueFrom:
