--- a/.github/cloudbuild/pos-publish-release-artifacts.yaml
+++ b/.github/cloudbuild/pos-publish-release-artifacts.yaml
@@ -25,7 +25,7 @@ steps:
   # publish jars to artifact registry
   ###########################################################
 - id: 'publish-jars'
-  name: gcr.io/google.com/cloudsdktool/cloud-sdk
+  name: maven:3.9.1-eclipse-temurin-17-alpine
   entrypoint: bash
   args:
   - -c
