--- a/.github/cloudbuild/pos-publish-release-artifacts.yaml
+++ b/.github/cloudbuild/pos-publish-release-artifacts.yaml
@@ -25,13 +25,10 @@ steps:
   # publish jars to artifact registry
   ###########################################################
 - id: 'publish-jars'
-  name: maven:3.9.1-eclipse-temurin-17
-  entrypoint: bash
+  name: maven:3.9.1-eclipse-temurin-17-alpine
+  entrypoint: mvn
   args:
-  - -c
-  - |
-    echo "Deploying the maven jars..."
-    ./mvnw deploy
+  - deploy
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
 
