--- a/.github/auto-approve.yml
+++ b/.github/auto-approve.yml
@@ -15,3 +15,4 @@
 # https://github.com/googleapis/repo-automation-bots/tree/main/packages/auto-approve
 processes:
   - "JavaDependency"
+  - "NodeDependency"
