--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
   <groupId>com.google.abm-edge</groupId>
   <artifactId>abm-edge-usecase</artifactId>
-  <version>0.1.1-SNAPSHOT</version>
+  <version>0.3.0</version>
   <packaging>pom</packaging>
 
   <name>abm-edge-usecase-workload</name>
@@ -61,6 +61,13 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>spring-cloud-gcp-dependencies</artifactId>
+        <version>4.2.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
@@ -150,7 +157,7 @@
           <version>3.3.1</version>
           <configuration>
             <from>
-              <image>eclipse-temurin:17.0.4.1_1-jre-alpine</image>
+              <image>eclipse-temurin:17.0.7_7-jre-jammy</image>
             </from>
           </configuration>
         </plugin>
