--- a/src/service-sdk/pom.xml
+++ b/src/service-sdk/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>com.google.abm-edge</groupId>
     <artifactId>abm-edge-usecase</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.3.0</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
@@ -40,8 +40,21 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>spring-cloud-gcp-starter-data-spanner</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>spring-cloud-gcp-data-spanner</artifactId>
+    </dependency>
+    <dependency>
       <groupId>jakarta.persistence</groupId>
       <artifactId>jakarta.persistence-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-annotations</artifactId>
+      <version>3.5.6-Final</version>
     </dependency>
   </dependencies>
 
