feat: ignore healthy and ready traces
feat: add spans for db calls

--- a/src/inventory/src/main/resources/application.properties
+++ b/src/inventory/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=demopassword
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.sleuth.sampler.probability=1.0
+spring.sleuth.web.skipPattern=(^/healthy.*|^/ready.*)
