--- a/src/api-server/src/main/resources/application.properties
+++ b/src/api-server/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.sleuth.sampler.probability=1
+payment.delay=0
