--- a/k8-manifests/dev/inventory.yaml
+++ b/k8-manifests/dev/inventory.yaml
@@ -67,7 +67,7 @@ spec:
         resources:
           requests:
             cpu: 100m
-            memory: 512Mi
+            memory: 1Gi
           limits:
             cpu: 500m
             memory: 1Gi
