--- a/k8-manifests/release/inventory.yaml
+++ b/k8-manifests/release/inventory.yaml
@@ -79,7 +79,7 @@ spec:
         resources:
           requests:
             cpu: 100m
-            memory: 512Mi
+            memory: 1Gi
           limits:
             cpu: 500m
             memory: 1Gi
