feat: tracing, logging (#241)
* feat: logging & tracing (#234)

auto-merging since this is non-main

* feat: delay for demonstration purposes (#238)

* feat: ignore healthy and ready traces (#237)

feat: add spans for db calls

Co-authored-by: Aaron Wanjala <aaronmwanjala@google.com>

* release: update version before release

* chore: coveo fmt

* fix: define transaction manager

* release: update pr number

* chore(release): 0.3.0

* release: update version before release

* release: update version before release

---------

Co-authored-by: Mofizur Rahman <moficodes@gmail.com>
Co-authored-by: Anthos DPE <smab@google.com>

--- a/src/api-server/src/main/resources/application.properties
+++ b/src/api-server/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.sleuth.sampler.probability=1
+spring.sleuth.web.skipPattern=(^/healthy.*|^/ready.*)
+payment.delay=0
