fix: taking cloudbuild step from JSS branch.

--- a/.github/cloudbuild/pos-publish-release-artifacts.yaml
+++ b/.github/cloudbuild/pos-publish-release-artifacts.yaml
@@ -24,16 +24,20 @@ steps:
   ###########################################################
   # publish jars to artifact registry
   ###########################################################
-- id: 'publish-jars'
-  name: gcr.io/google.com/cloudsdktool/cloud-sdk
-  entrypoint: bash
-  args:
-  - -c
-  - |
-    echo "Deploying the maven jars..."
-    ./mvnw deploy
-  # indicates that the step need not wait for any other step
-  waitFor: [ '-' ]
+# - id: 'publish-jars'
+#   name: gcr.io/google.com/cloudsdktool/cloud-sdk
+#   entrypoint: bash
+#   args:
+#   - -c
+#   - |
+#     echo "Deploying the maven jars..."
+#     ./mvnw deploy
+#   # indicates that the step need not wait for any other step
+#   waitFor: [ '-' ]
+
+###########################################################
+# WE DONT DEPLOY THE MAVEN JARS FOR THE JSS BRANCH
+###########################################################
 
  ###########################################################
   # skaffold deploy to kubernetes cluster
