--- a/src/inventory/pom.xml
+++ b/src/inventory/pom.xml
@@ -14,7 +14,9 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.google.abm-edge</groupId>
@@ -24,10 +26,12 @@
   </parent>
   <artifactId>inventory</artifactId>
   <name>inventory</name>
-  <description>Application to manage inventory for the Edge Use case workload</description>
+  <description>Application to manage inventory for the Edge Use case workload
+  </description>
   <properties>
     <java.version>17</java.version>
-    <spring.boot.mainclass>com.google.abmedge.inventory.InventoryApplication</spring.boot.mainclass>
+    <spring.boot.mainclass>com.google.abmedge.inventory.InventoryApplication
+    </spring.boot.mainclass>
   </properties>
   <dependencies>
     <dependency>
@@ -120,6 +124,12 @@
         <!--The Surefire Plugin is used during the test phase of the build lifecycle to execute the unit tests of an application.-->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.math=ALL-UNNAMED
+          </argLine>
+        </configuration>
       </plugin>
       <plugin>
         <!--JaCoCo-Maven plugin is used to provide code coverage (i.e: tests covering code) reporting-->
