--- a/src/payments/pom.xml
+++ b/src/payments/pom.xml
@@ -117,6 +117,12 @@
         <!--The Surefire Plugin is used during the test phase of the build lifecycle to execute the unit tests of an application.-->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.math=ALL-UNNAMED
+          </argLine>
+        </configuration>
       </plugin>
       <plugin>
         <!--JaCoCo-Maven plugin is used to provide code coverage (i.e: tests covering code) reporting-->
