build: Update sourceFileExtensions

--- a/.github/header-checker-lint.yml
+++ b/.github/header-checker-lint.yml
@@ -30,6 +30,13 @@ allowedLicenses:
 # ignoreLicenseYear: true # Useful when migrating in code licensed at previous years.
 
 sourceFileExtensions:
+  - 'css'
+  - 'java'
+  - 'js'
+  - 'properties'
+  - 'py'
+  - 'sh'
   - 'tf'
+  - 'vue'
   - 'yaml'
   - 'yml'
