--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <googlejavaformat.version>1.15.0</googlejavaformat.version>
     <artifactregistry-maven-wagon.extension.version>2.2.1
     </artifactregistry-maven-wagon.extension.version>
+    <testcontainers-bom.version>1.19.3</testcontainers-bom.version>
   </properties>
 
   <modules>
@@ -64,7 +65,7 @@
       <dependency>
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-bom</artifactId>
-        <version>1.19.1</version>
+        <version>${testcontainers-bom.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
